--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body style="background-color: rgb(79, 156, 15);">
         
-        <div style="text-align: center;">
-            <h1 class="head">To do App</h1>
+        <h1 class="head">To do App</h1>
+        <div style="text-align: center; background-color: white; padding:50px; width: 50%; margin: 0 auto; border: 2px solid black; border-radius: 10px;">
             <input class="userinput" placeholder="Enter your Input"
                 id="userinput" type="text">
             <button class="dltbtn" onclick="addItem()">Add Item</button>
